--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 
                 <div class="logo-container">
                     <img src="https://Ramkrishna0102.github.io/Rks_portfolio/userAsset/NavLogo.jpg" class="logo">
-                    <div class="logo-text">amkrishna Singh</div>
+                    <div class="logo-text">Ramkrishna Singh</div>
                 </div>
                 
                 <div class="nav-items">
