--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navbar">
                 
                 <div class="logo-container">
-                    <img src="https://Ramkrishna0102.github.io/Rks_portfolio/userAsset/NavLogo.jpeg" class="logo">
+                    <img src="https://Ramkrishna0102.github.io/Rks_portfolio/userAsset/logo.jpg" class="logo">
                     <div class="logo-text">Ramkrishna Singh</div>
                 </div>
                 
