--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="navbar">
                 
                 <div class="logo-container">
-                    <img src="https://Ramkrishna0102.github.io/Rks_portfolio/userAsset/logo.jpg" class="logo">
-                    <div class="logo-text">Ramkrishna Singh</div>
+<!--                     <img src="https://Ramkrishna0102.github.io/Rks_portfolio/userAsset/logo.jpg" class="logo"> -->
+                    <div class="logo-text">RKSINGH</div>
                 </div>
                 
                 <div class="nav-items">
